# Connect4

./: CMakeLists.txt  run.sh
src/: ai.cpp  ai.hpp  con4.cpp  con4.hpp  main.cpp  options.cpp  options.hpp  run.cpp  run.hpp  ternary.cpp  ternary.hpp
